project-manager NI build uses module-path from the Runtime scope